--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^1.0.1",
     "jit-grunt": "^0.9.1",
-    "grunt-autoprefixer": "^3.0.3"
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
